[gd_scene load_steps=16 format=3 uid="uid://nalymlb6egj5"]

[ext_resource type="Script" uid="uid://djji643ihk163" path="res://src/gameplay/mechanics/inventory/gem_upgrade_ui/upgrade_gem_panel.gd" id="2_1q51l"]
[ext_resource type="Texture2D" uid="uid://dl44h3mquwq8i" path="res://assets/sprites/items/gems/gem_exquisite_yellow.png" id="2_5bnl5"]
[ext_resource type="Texture2D" uid="uid://drkfuux1y2ttw" path="res://assets/sprites/items/gems/_gem_effect.png" id="3_5bnl5"]
[ext_resource type="PackedScene" uid="uid://dh3yligryu8qj" path="res://src/gameplay/mechanics/inventory/item_details_modal/attribute_label.tscn" id="4_5bnl5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5bnl5"]

[sub_resource type="Gradient" id="Gradient_2i3wj"]
interpolation_color_space = 1
offsets = PackedFloat32Array(0.0408654, 0.641827)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5bnl5"]
gradient = SubResource("Gradient_2i3wj")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Animation" id="Animation_tiwlg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [30]
}

[sub_resource type="Animation" id="Animation_l4my2"]
resource_name = "common"
length = 2.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_sad7d"]
resource_name = "exquisite"
length = 2.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [29, 30, 31, 32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_ubykc"]
resource_name = "flawless"
length = 2.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_ut6oc"]
resource_name = "fragmented"
length = 2.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_1q51l"]
resource_name = "printine"
length = 2.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [29, 30, 31, 32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_soudl"]
resource_name = "refined"
length = 2.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pc0qb"]
_data = {
&"RESET": SubResource("Animation_tiwlg"),
&"common": SubResource("Animation_l4my2"),
&"exquisite": SubResource("Animation_sad7d"),
&"flawless": SubResource("Animation_ubykc"),
&"fragmented": SubResource("Animation_ut6oc"),
&"printine": SubResource("Animation_1q51l"),
&"refined": SubResource("Animation_soudl")
}

[node name="GemUpgradePreviewUI" type="Control"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 3
anchor_right = 0.1875
anchor_bottom = 0.177778
script = ExtResource("2_1q51l")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="Panel" parent="."]
custom_minimum_size = Vector2(96, 96)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_right = 48.0
offset_bottom = 96.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_5bnl5")
metadata/_edit_lock_ = true

[node name="RarityTexture" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
offset_right = 96.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = SubResource("GradientTexture2D_5bnl5")
metadata/_edit_lock_ = true

[node name="IconTexture" type="TextureRect" parent="HBoxContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5bnl5")
expand_mode = 3
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer"]
position = Vector2(48, 48)
scale = Vector2(1.6, 1.6)
texture = ExtResource("3_5bnl5")
hframes = 6
vframes = 6
frame = 30
metadata/_edit_lock_ = true

[node name="GemName" parent="." instance=ExtResource("4_5bnl5")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 13.0
offset_right = 128.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
text = "Mythical Critical Damage Gem"
autowrap_mode = 3

[node name="AttributeLabel" parent="." instance=ExtResource("4_5bnl5")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -61.5
offset_top = -15.0
offset_right = 61.5
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0
text = "asasasasas"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pc0qb")
}
